--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -41,7 +41,7 @@ p, ul, li{
 
 p{
   line-height: 20px;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 ul{
