--- a/scss/components/_content.scss
+++ b/scss/components/_content.scss
@@ -2,4 +2,5 @@
   background: $light-grey;
   height: 85vh;
   width: 100vw;
+  border: 1px solid red;
 }
